<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <Button
        android:text="@string/button_mode_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/buttonMode1"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/button_mode_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonMode1"
        android:layout_alignParentStart="true"
        android:id="@+id/buttonMode2"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/button_mode_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonMode2"
        android:layout_alignParentStart="true"
        android:id="@+id/buttonMode3"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/button_mode_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonMode3"
        android:layout_alignParentStart="true"
        android:id="@+id/buttonMode4"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/button_mode_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonMode4"
        android:layout_alignParentStart="true"
        android:id="@+id/buttonMode5"
        android:layout_alignParentEnd="true" />

</RelativeLayout>